Try a fix for Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
   - secure: oRtk0cC35ItGNDY0z9gRenVW8qTE8St+XmhFNkh/K4BWLp5vMzv+hOBzXK9ZJ38prppcGur6evVNqJ7NCrGyH6DjS3TjBzd/FalvD1lEZyAKPKVihHjLwOr2uayt6nGhA7wt7HlFLvL1pfiuWnR6tFWxP3fI8duuu0x9N0ILyu0=
 addons:
   apt:
+    sources:
+    - debian-sid
     packages:
     - qtbase5-dev
     - qttools5-dev
